Software restructuring. Spike pooling fixes.
- Fixed bug computing the pool_size based on error margin. For an error margin
m, the pool_size should be m + 1 with a stride of 1.
- Added max pooling for error margins to the network architecture to make it explicitely
part of the backprop.
- Moved SJ preprocessing and examples to the internal deep-calcium-integration repository.
- Moved max pooling for ground-truth spikes to the generator. Removed the various
margin metrics. Now using a single F2 metric that uses the max-pooled ground-truth
and outputs.
- Aggregated neuron and spike utils into deepcalcium.utils.neurons and deepcalcium.utils.spikes
Updated corresponding imports.

--- a/notebooks/suli_figures.ipynb
+++ b/notebooks/suli_figures.ipynb
@@ -33,11 +33,11 @@
     "import os\n",
     "\n",
     "import sys; sys.path.append('..')\n",
-    "from deepcalcium.utils.visuals import mask_outlines\n",
+    "from deepcalcium.utils.neurons import mask_outlines\n",
     "from deepcalcium.models.neurons.unet_2d_summary import UNet2DSummary\n",
     "from deepcalcium.models.spikes.unet_1d_segmentation import UNet1DSegmentation\n",
     "from deepcalcium.datasets.nf import nf_load_hdf5\n",
-    "from deepcalcium.models.spikes.utils import plot_traces_spikes\n",
+    "from deepcalcium.utils.spikes import plot_traces_spikes\n",
     "os.environ['CUDA_VISIBLE_DEVICES'] = \"\"\n",
     "\n",
     "print('Done')"
