--- a/notebooks/dlmia_workshop_figures.ipynb
+++ b/notebooks/dlmia_workshop_figures.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "sys.path.append('..')\n",
     "from deepcalcium.datasets.nf import nf_load_hdf5, nf_mask_metrics\n",
-    "from deepcalcium.utils.visuals import mask_outlines\n",
+    "from deepcalcium.utils.neurons import mask_outlines\n",
     "from deepcalcium.models.neurons.unet_2d_summary import UNet2DSummary, _summarize_mask, _summarize_series\n",
     "from deepcalcium.utils.keras_helpers import load_model_with_new_input_shape\n",
     "\n",
